fixed up layout and spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,6 +92,11 @@ body {
 .u-center-text {
   text-align: center !important; }
 
+.u-center-vertical {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%); }
+
 .u-margin-bottom-lg {
   margin-bottom: 8rem !important; }
 
@@ -456,13 +461,26 @@ body {
   opacity: 1; }
 
 .header {
-  height: 90vh;
+  height: 95vh;
   position: relative;
   background-image: linear-gradient(to right bottom, rgba(0, 61, 215, 0.7), rgba(139, 123, 218, 0.7)), url("../img/P1251209.JPG");
   background-size: cover;
   background-position: top;
-  -webkit-clip-path: polygon(0 0, 100% 0, 100% 70vh, 0 100%);
-  clip-path: polygon(0 0, 100% 0, 100% 70vh, 0 100%); }
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+  clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+  position: relative; }
+  .header__logo-box {
+    position: absolute;
+    top: 4rem;
+    left: 4rem;
+    text-align: center; }
+  .header__logo {
+    width: 8rem; }
+  .header__logo-text {
+    color: #fff;
+    font-weight: 100;
+    text-transform: uppercase;
+    font-size: 1.5rem; }
   .header__text-box {
     position: absolute;
     top: 50%;
@@ -504,23 +522,25 @@ body {
 
 .section-about {
   background-color: #f7f7f7;
-  padding: 25rem 0;
-  margin-top: -35vh; }
+  padding-top: 25rem;
+  padding-bottom: 30rem;
+  margin-top: -18rem; }
 
 .section-features {
-  padding: 15rem 0;
+  height: 100vh;
+  position: relative;
+  padding: 24rem 0;
   background-image: linear-gradient(to right bottom, rgba(0, 61, 215, 0.7), rgba(139, 123, 218, 0.7)), url("../img/nat-4.jpg");
   background-size: cover;
-  transform: skewY(-5.5deg);
-  margin-top: -10rem; }
-  .section-features > * {
-    transform: skewY(5.5deg); }
+  margin-top: -22rem;
+  -webkit-clip-path: polygon(0 15%, 100% 0%, 100% 85%, 0% 100%);
+  clip-path: polygon(0 15%, 100% 0%, 100% 85%, 0% 100%); }
 
 .section-tours {
   background-color: #f7f7f7;
-  padding-top: 25rem;
+  padding-top: 21rem;
   padding-bottom: 10rem;
-  margin-top: -15rem; }
+  margin-top: -14rem; }
 
 .section-stories {
   padding: 10rem 0;
