--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -2,6 +2,12 @@
   text-align: center !important;
 }
 
+.u-center-vertical {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
 .u-margin-bottom-lg {
   margin-bottom: 8rem !important;
 }
