--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,5 +1,5 @@
 .header {
-  height: 90vh;
+  height: 95vh;
   position: relative;
   background-image: linear-gradient(
       to right bottom,
@@ -9,8 +9,27 @@
     url("../img/P1251209.JPG");
   background-size: cover;
   background-position: top;
-  -webkit-clip-path: polygon(0 0, 100% 0, 100% 70vh, 0 100%);
-  clip-path: polygon(0 0, 100% 0, 100% 70vh, 0 100%);
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+  clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+  position: relative;
+
+  &__logo-box {
+    position: absolute;
+    top: 4rem;
+    left: 4rem;
+    text-align: center;
+  }
+
+  &__logo {
+    width: 8rem;
+  }
+
+  &__logo-text {
+    color: $color-light;
+    font-weight: 100;
+    text-transform: uppercase;
+    font-size: 1.5rem;
+  }
 
   &__text-box {
     position: absolute;
