--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,11 +1,14 @@
 .section-about {
   background-color: $color-grey-light-1;
-  padding: 25rem 0;
-  margin-top: -35vh;
+  padding-top: 25rem;
+  padding-bottom: 30rem;
+  margin-top: -18rem;
 }
 
 .section-features {
-  padding: 15rem 0;
+  height: 100vh;
+  position: relative;
+  padding: 24rem 0;
   background-image: linear-gradient(
       to right bottom,
       rgba($color-primary, 0.7),
@@ -13,19 +16,21 @@
     ),
     url("../img/nat-4.jpg");
   background-size: cover;
-  transform: skewY(-5.5deg);
-  margin-top: -10rem;
+  margin-top: -22rem;
+  -webkit-clip-path: polygon(0 15%, 100% 0%, 100% 85%, 0% 100%);
+  clip-path: polygon(0 15%, 100% 0%, 100% 85%, 0% 100%);
+  // transform: skewY(-5.5deg);
 
-  & > * {
-    transform: skewY((5.5deg));
-  }
+  // & > * {
+  //   transform: skewY((5.5deg));
+  // }
 }
 
 .section-tours {
   background-color: $color-grey-light-1;
-  padding-top: 25rem;
+  padding-top: 21rem;
   padding-bottom: 10rem;
-  margin-top: -15rem;
+  margin-top: -14rem;
 }
 
 .section-stories {
